improvement input stable  when collapse, dragging, bug fix save data

--- a/src/pages/TISC/Product/Basis/Option/components/Linkage.less
+++ b/src/pages/TISC/Product/Basis/Option/components/Linkage.less
@@ -26,11 +26,13 @@
   display: flex;
   justify-content: center;
   height: calc(100% - @footer-height);
-  padding: 16px 16px 0;
+  padding: 16px;
+  // overflow: auto;
 
   .content {
     height: 100%;
     overflow: auto;
+    // margin-bottom: 16px;
   }
 }
 
