--- a/src/pages/TISC/Product/Basis/Option/components/OptionItem.less
+++ b/src/pages/TISC/Product/Basis/Option/components/OptionItem.less
@@ -1,34 +1,8 @@
-.collapseContainer {
-  margin-top: 16px;
-  .active_collapse_panel {
-    box-shadow: inset 0 -0.7px 0 @mono-color-medium;
-  }
-  .unactive_collapse_panel {
-    box-shadow: @border-bottom;
-  }
-
-  :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
-    padding: 0;
-    border-radius: 0;
-  }
-  :global(.ant-collapse-content > .ant-collapse-content-box) {
-    padding: 0;
-  }
-  :global(
-      .ant-collapse-ghost > .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box
-    ) {
-    padding: 0;
-  }
-  :global(.ant-collapse > .ant-collapse-item:last-child) {
-    border-radius: 0;
-  }
-  :global(.ant-radio-input) {
-    width: 100%;
-    height: 20px;
-  }
-  :global(.ant-radio-wrapper) {
-    margin-right: 0;
-  }
+.active_collapse_panel {
+  box-shadow: @border-bottom;
+}
+.unactive_collapse_panel {
+  box-shadow: inset 0 -0.7px 0 @mono-color-medium;
 }
 
 .svg {
@@ -47,13 +21,58 @@
   }
 }
 
+.disabledIcon {
+  :global(.icons) {
+    svg {
+      cursor: default !important;
+      path {
+        fill: @mono-color-medium !important;
+
+        &:hover {
+          path {
+            fill: @mono-color-medium !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+.collapseContainer {
+  margin-top: 16px;
+
+  :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
+    padding: 0;
+    border-radius: 0;
+  }
+  :global(.ant-collapse-content > .ant-collapse-content-box) {
+    padding: 0;
+  }
+  /* stylelint-disable selector-pseudo-class-parentheses-space-inside */
+  :global(
+      .ant-collapse-ghost > .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box
+    ) {
+    padding: 0;
+  }
+  :global(.ant-collapse > .ant-collapse-item:last-child) {
+    border-radius: 0;
+  }
+  :global(.ant-radio-input) {
+    width: 100%;
+    height: 20px;
+  }
+  :global(.ant-radio-wrapper) {
+    margin-right: 0;
+  }
+}
+
 .main_panel_header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding-bottom: 16px;
-  cursor: default;
+  cursor: pointer;
 
   &__left {
     display: flex;
@@ -85,26 +104,10 @@
     justify-content: space-between;
     height: 32px;
     margin-left: 16px;
+    cursor: default;
 
     svg {
       .svg();
-    }
-  }
-}
-
-.disabledIcon {
-  :global(.icons) {
-    svg {
-      cursor: default;
-      path {
-        fill: @mono-color-medium !important;
-
-        &:hover {
-          path {
-            fill: @mono-color-medium !important;
-          }
-        }
-      }
     }
   }
 }
@@ -114,11 +117,24 @@
   flex-direction: column;
   width: 100%;
   // padding-left: 16px;
+
+  :global(.ant-collapse-header-text) > div {
+    cursor: pointer;
+  }
+
+  :global(.ant-collapse-item.ant-collapse-item-disabled) {
+    :global(.ant-collapse-header-text) > div {
+      cursor: default;
+    }
+
+    :global(.drag-icon) {
+      cursor: pointer;
+    }
+  }
 }
 
 .panel_header {
   width: 100%;
-  padding-left: 16px;
   cursor: default;
 
   &__field {
@@ -127,12 +143,17 @@
     justify-content: space-between;
     padding: 16px 0;
 
-    svg {
+    :global(.drag-icon) {
       display: block;
+      margin-left: 16px;
       cursor: pointer;
+
+      path {
+        fill: #000;
+      }
     }
 
-    &_right {
+    &_left {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -160,7 +181,6 @@
       display: flex;
       align-items: center;
       margin-right: 24px;
-      cursor: pointer;
       &_icon {
         transition: all 0.3s;
       }
@@ -173,18 +193,12 @@
     }
   }
 
-  &__input {
+  &__right {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 32px;
-
-    &_value {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-    }
+    cursor: default;
 
     svg {
       .svg();
@@ -194,6 +208,7 @@
 
 .sub_wrapper {
   display: flex;
+  flex-direction: column;
   width: 100%;
   padding-left: 16px;
 
@@ -208,7 +223,11 @@
     }
   }
 
-  svg {
+  :global(.ant-empty) {
+    margin: 32px auto;
+  }
+
+  :global(.delete_sub_icon) {
     cursor: pointer;
     path {
       transition: fill 0.3s;
@@ -221,6 +240,13 @@
       }
     }
   }
+}
+
+.cardMode {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
+  gap: 8px 16px;
+  padding-bottom: 16px;
 }
 
 .element {
